--- a/learn-m365-pr/wwl/introduction-to-privileged-identity-management/2-explore-azure-ad.yml
+++ b/learn-m365-pr/wwl/introduction-to-privileged-identity-management/2-explore-azure-ad.yml
@@ -4,12 +4,13 @@ title: Explore Privileged Identity Management in Azure AD
 metadata:
   title: Explore Privileged Identity Management in Azure AD
   description: "Explore Privileged Identity Management in Azure AD"
-  ms.date: 04/29/2021
+  ms.date: 04/28/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/2-explore-azure-ad.md)]
