--- a/learn-m365-pr/wwl/introduction-to-azure-identity-protection/3-enable-default-protection-policies.yml
+++ b/learn-m365-pr/wwl/introduction-to-azure-identity-protection/3-enable-default-protection-policies.yml
@@ -4,12 +4,13 @@ title: Enable the default protection policies in AIP
 metadata:
   title: Enable the default protection policies in AIP
   description: "Enable the default protection policies in AIP"
-  ms.date: 08/26/2021
+  ms.date: 04/28/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/3-enable-default-protection-policies.md)]
