--- a/learn-m365-pr/wwl/introduction-to-azure-identity-protection/5-plan-your-identity-investigation.yml
+++ b/learn-m365-pr/wwl/introduction-to-azure-identity-protection/5-plan-your-identity-investigation.yml
@@ -4,12 +4,13 @@ title: Plan your identity investigation
 metadata:
   title: Plan your identity investigation
   description: "Plan your identity investigation"
-  ms.date: 08/26/2021
+  ms.date: 04/28/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 4
 content: |
   [!include[](includes/5-plan-your-identity-investigation.md)]
