--- a/learn-m365-pr/wwl/introduction-to-threat-vectors-data-breaches/4-examine-how-spoofing-deceives-users-compromises-data-security.yml
+++ b/learn-m365-pr/wwl/introduction-to-threat-vectors-data-breaches/4-examine-how-spoofing-deceives-users-compromises-data-security.yml
@@ -4,12 +4,13 @@ title: Examine how spoofing deceives users and compromises data security
 metadata:
   title: Examine how spoofing deceives users and compromises data security
   description: "Examine how spoofing deceives users and compromises data security"
-  ms.date: 04/29/2021
+  ms.date: 04/28/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/4-examine-how-spoofing-deceives-users-compromises-data-security.md)]
