changed files by pdets auto publish service, publishid[508aacef-e2e1-4b41-a742-a07c329caed2] and do [publish].

--- a/learn-m365-pr/wwl/manage-authentication-for-messaging/index.yml
+++ b/learn-m365-pr/wwl/manage-authentication-for-messaging/index.yml
@@ -17,7 +17,8 @@ abstract: |
   *   Implement multifactor authentication.
   *   Plan password policies.
   *   Configure modern authentication in Exchange Online.
-prerequisites: ""
+prerequisites: |
+  None
 iconUrl: /learn/achievements/messaging-manage-authentication.svg
 levels:
 - intermediate
