--- a/learn-m365-pr/paths/m365-security-compliance-capabilities/index.yml
+++ b/learn-m365-pr/paths/m365-security-compliance-capabilities/index.yml
@@ -3,16 +3,16 @@ uid: learn.wwl.m365-security-compliance-capabilities
 metadata:
   title: 'Microsoft 365 Fundamentals: Demonstrate fundamental knowledge of Microsoft 365 security and compliance capabilities'
   description: 'Microsoft 365 Fundamentals: Demonstrate fundamental knowledge of Microsoft 365 security and compliance capabilities'
-  ms.date: 01/12/2022
+  ms.date: 04/29/2022
   author: wwlpublish
-  ms.author: dahans
+  ms.author: asglenno
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: 'Microsoft 365 Fundamentals: Demonstrate fundamental knowledge of Microsoft 365 security and compliance capabilities'
 prerequisites: |
-  - A basic understanding of cloud computing. If you're unfamiliar with basic cloud computing concepts, we recommend you take [Cloud Concepts - Principles of cloud computing](/learn/modules/principles-cloud-computing/index)
+  - Familiarity with cloud computing concepts including deployment models and cloud service models, such as Software-as-a-Service (Saas). If you're unfamiliar with basic cloud computing concepts, we recommend you take [Discuss Azure fundamental concepts](/learn/modules/fundamental-azure-concepts/)
 summary: |
-  Learn about the Microsoft 365 security and compliance solutions areas and the capabilities available to help enterprises secure their enterprise and meet regulatory requirements.
+  Learn about how the security, compliance, and identity solutions through Microsoft help people and organizations secure their entire digital estate, simplify compliance and reduce risk.
 iconUrl: /learn/achievements/microsoft-365-security-and-compliance-capabilities.svg
 levels:
 - beginner
@@ -22,13 +22,9 @@ roles:
 products:
 - m365
 modules:
-- learn-m365.what-is-m365
 - learn.wwl.describe-security-concepts-methodologies
-- learn.wwl.describe-identity-access-management-capabilities-of-microsoft-365
-- learn.wwl.describe-threat-protection-capabilities-of-microsoft-365
-- learn.wwl.describe-cloud-security-capabilities-of-microsoft-365
-- learn.wwl.describe-information-protection-governance-capabilities-of-microsoft-365
+- learn.wwl.describe-identity-principles-concepts
+- learn.wwl.describe-threat-protection-with-microsoft-365-defender
 - learn.wwl.describe-compliance-management-capabilities-microsoft
-- learn.wwl.reduce-risk-simplify-discovery-audit-process
 trophy:
   uid: learn.wwl.m365-security-compliance-capabilities.trophy
