--- a/learn-m365-pr/wwl/introduction-to-security-solutions-microsoft-365/7-review-security-reports-microsoft-365-defender.yml
+++ b/learn-m365-pr/wwl/introduction-to-security-solutions-microsoft-365/7-review-security-reports-microsoft-365-defender.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Review the security reports in Microsoft 365 Defender"
   ms.date: 04/29/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
