changed files by pdets auto publish service, publishid[1e516b45-4b32-4b00-a5a8-2c1b74de38e5] and do [publish].

--- a/learn-m365-pr/wwl/introduction-to-microsoft-secure-score/2-explore.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-secure-score/2-explore.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.introduction-to-microsoft-secure-score.explore
-title: Explore Microsoft 365 Defender Secure Score
+title: Explore Microsoft Secure Score
 metadata:
-  title: Explore Microsoft 365 Defender Secure Score
-  description: "Explore Microsoft 365 Defender Secure Score"
+  title: Explore Microsoft Secure Score
+  description: "Explore Microsoft Secure Score"
   ms.date: 04/29/2022
   author: wwlpublish
   ms.author: tfrink
