--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/knowledge-check.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365-pr.viva-goals-write-effective-okrs.knowledge-check
+uid: learn-m365.viva-goals-write-effective-okrs.knowledge-check
 title: Knowledge check
 metadata:
   unitType: knowledge_check
