--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/okr-levels-and-alignment.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/okr-levels-and-alignment.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365-pr.viva-goals-write-effective-okrs.okr-levels-and-alignment
+uid: learn-m365.viva-goals-write-effective-okrs.okr-levels-and-alignment
 title: OKR levels and alignment
 metadata:
   unitType: learning-content
