--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/writing-framework.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/writing-framework.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365-pr.viva-goals-write-effective-okrs.writing-framework
+uid: learn-m365.viva-goals-write-effective-okrs.writing-framework
 title: Writing framework
 metadata:
   unitType: learning-content
