--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/introduction.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365-pr.viva-goals-write-effective-okrs.introduction
+uid: learn-m365.viva-goals-write-effective-okrs.introduction
 title: Introduction
 metadata:
   unitType: introduction
