--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/summary.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/summary.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365-pr.viva-goals-write-effective-okrs.summary
+uid: learn-m365.viva-goals-write-effective-okrs.summary
 title: Summary
 metadata:
   unitType: summary
