--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/writing-best-practices.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/writing-best-practices.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365-pr.viva-goals-write-effective-okrs.writing-best-practices
+uid: learn-m365.viva-goals-write-effective-okrs.writing-best-practices
 title: Writing best practices
 metadata:
   unitType: learning-content
