--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/viva-goals-write-effective-okrs/index.yml
@@ -26,7 +26,7 @@ roles:
   - administrator
 products: 
 - m365
-- Viva
+- viva
 units:
 - learn-m365.viva-goals-write-effective-okrs.introduction
 - learn-m365.viva-goals-write-effective-okrs.writing-best-practices
