--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigating-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigating-viva-goals.yml
@@ -4,7 +4,9 @@ title: Navigating Viva Goals
 metadata:
   unitType: learning-content
   title: Navigating Viva Goals
-  description: Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
+  description: |
+  Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
+  **IMPORTANT**: Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.] (https://go.microsoft.com/fwlink/?linkid=2189933)
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
